<resources>
    <string name="app_name">MELISA APP</string>
    <string name="opcion1">Actividad 2</string>
    <string name="opcion2">Fragment Tabhost</string>
    <string name="opcion3">Manipulando elementos por codigo</string>
    <string name="opcion4">Recycler View</string>
    <string name="Salir">Salir</string>
    <string name="tituloAplicacion">Mi primera app</string>
    <string name="action_settings">Configuración</string>

</resources>