<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity3">

    <LinearLayout xmlns:android
        ="http://schemas.android.com/apk/res/android"
        xmlns:tools
            ="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="69dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tituloAplicacion"
            android:gravity="center_horizontal"
            android:textSize="25sp"
            android:layout_marginBottom="11dp"/>
        <Button android:id="@+id/button01"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/opcion1"
            android:onClick="actividad2"
            android:layout_marginBottom="11dp"/>
        <Button android:id="@+id/button02"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/opcion2"
            android:layout_marginBottom="11dp"
            android:onClick="actividad_frag"/>
        <Button android:id="@+id/button04"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/opcion3"
            android:layout_marginBottom="11dp"
            android:onClick="actividad_mepc"/>
        <Button android:id="@+id/button03"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/opcion4"
            android:layout_marginBottom="11dp"
            android:onClick="actividad_recycler"/>
        <Button android:id="@+id/button05"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/Salir"
            android:layout_marginBottom="11dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>